@@ -87,6 +87,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Move models and forms for `wagtailsearch.Query` to `wagtail.contrib.search_promotions` (Karl Hobley)
  * Migrate `initErrorDetection` (tabs error counts) to a Stimulus Controller `w-count` (Aman Pandey)
  * Migrate `window.addMessage` behaviour to a global event listener & Stimulus Controller approach with `w-messages` (Aman Pandey)
+ * Update Algolia DocSearch to use new application and correct versioning setup (Thibaud Colas)
 
 ## Upgrade considerations
 
